# writing_observer

./: .eslintignore  .eslintrc.json  .gitignore  .readthedocs.yaml  .stylelintrc.json  CONTRIBUTORS.TXT  Dockerfile  INSTALL.md  Makefile  README.md  VERSION  awe_requirements.txt  docker-compose.yaml  list-unused-css.js  lo_install.txt  package.json  pre-commit.sh  requirements.txt  test.sh  wo_requirements.txt
learning_observer/: VERSION  auth_handlers.py  code_quality.sh  creds.yaml.example  dashboard.py  defaults.lo.xml  defaults.locfg  filesystem_state.py  incoming_student_event.py  init.py  local.lo.xml  log_event.py  main.py  paths.py  reducer_testing.ipynb  rosters.py  setup.cfg  setup.py  test.sh
learning_observer/docs/: adapters.md  conf.py  index.rst
learning_observer/docs/architecture/: system_design.md
learning_observer/learning_observer/: Makefile  __main__.py  admin.py  all_students_roster.py  auth_handlers.py  authutils.py  blacklist.py  blob_storage.py  cache.py  canvas.py  client_config.py  communication_protocol.py  constants.py  creds.yaml.example  creds.yaml.workshop  dash_integration.py  dash_wrapper.py  dashboard.py  doc_processor.py  downloads.py  exceptions.py  external_apis.py  filesystem_state.py  google.py  graphics_helpers.py  impersonate.py  incoming_student_event.py  init.py  init.sql  interactive_development.py  ipython_integration.py  jupyter.py  jupyter_helpers.py  kvs.py  log_event.py  main.py  merkle_store.py  module.py  module_loader.py  offline.py  (+19 more)
learning_observer/learning_observer/adapters/: README.md  adapter.py  helpers.py
learning_observer/learning_observer/auth/: __init__.py  auth.md  events.py  handlers.py  http_basic.py  lti_sso.py  password.py  roles.py  social.py  social_sso.py  utils.py
learning_observer/learning_observer/communication_protocol/: README.md  debugger.py  exception.py  executor.py  explorer.py  integration.py  query.js  query.py  request.py  schema.json  schema.py  test_cases.py  tests.py  util.py  view.py  visualizer.py
learning_observer/learning_observer/integrations/: __init__.py  canvas.py  google.py  schoology.py  util.py
learning_observer/learning_observer/pubsub/: __init__.py  pubstub.py  receivexmpp.py  redis_pubsub.py  sendxmpp.py
learning_observer/learning_observer/static/: config-server.json  config.json  dashboard.html  debug.html  debug.js  liblo.js  outline.js  student_data.js  ux.css  ux.html  webapp.html  webapp.js  wo_loader.js  wobserver.html  wobserver.js
learning_observer/learning_observer/static/common/: dashboard.js  logger.js
learning_observer/learning_observer/static/modules/: course.html  courses.html  informational.html  login.html  navbar_loggedin.html  tile.html  tool.html  unauth.md
learning_observer/learning_observer/static_data/: README.md  admins.yaml.template  courses.json.template  make_dummy_test_user_tsv.py  make_google_classroom_test_courses.py  teachers.yaml.template
learning_observer/learning_observer/stream_analytics/: __init__.py  fields.py  helpers.py  reconstruct_doc.py  time_on_task.py  writing_analysis.py
learning_observer/learning_observer/writing_observer/: aggregator.py
learning_observer/prototypes/: README.md  gpt.py  kafka_kvs.py  kafka_tree.py  llm_comm_protocol_query.py  llm_pipeline.py  local_reducer.ipynb  proxy.py  user_data_store.py
learning_observer/prototypes/cascading_settings/: main.css  parser.py
learning_observer/prototypes/communication_stream/: network.py
learning_observer/prototypes/dash_wo_teacher_dashboard/: README.md  aiohttp_server.py  app.py  data_preprocessing.py  requirements.txt  setup.cfg  setup.py
learning_observer/prototypes/dash_wo_teacher_dashboard/assets/: highlight.css  (+2 more)
learning_observer/prototypes/deprecated/: orm.py
learning_observer/prototypes/google_docs/: README.md  google_apis.py
learning_observer/prototypes/selenium_gdocs_automation/: README.md  selenium_gdoc.py
learning_observer/static/: webapp.js
learning_observer/static/modules/: unauth.md
learning_observer/util/: generic_websocket_dashboard.js  generic_websocket_dashboard.py  lo_dump.py  lo_load.py  lo_passwd.py  log_process.py  package-lock.json  package.json  populate_writing_observer_data.py  restream.py  stream_writing.py  traditional_dashboard.py
modules/lo_blocks_module/: README.md  VERSION  setup.cfg
modules/lo_blocks_module/lo_blocks_module/: module.py  reducers.py
modules/lo_template_module/{{ cookiecutter.project_slug }}/: .bumpversion.toml  MANIFEST.in  README.md  VERSION  setup.cfg  setup.py  test.sh
modules/wo_bulk_essay_analysis/: MANIFEST.in  README.md  VERSION  setup.cfg  setup.py
modules/wo_bulk_essay_analysis/wo_bulk_essay_analysis/: gpt.py  module.py
modules/wo_classroom_text_highlighter/: MANIFEST.in  README.md  VERSION  setup.cfg  setup.py
modules/wo_classroom_text_highlighter/wo_classroom_text_highlighter/: dash_dashboard.py  module.py  options.py  preset_component.py
modules/wo_common_student_errors/: MANIFEST.in  setup.cfg  setup.py
modules/wo_common_student_errors/wo_common_student_errors/: module.py
modules/wo_document_list/: MANIFEST.in  setup.cfg  setup.py
modules/wo_document_list/wo_document_list/: module.py
modules/wo_highlight_dashboard/: MANIFEST.in  requirements.txt  setup.cfg  setup.py
modules/wo_highlight_dashboard/tests/: conftest.py  test_module.py
modules/wo_highlight_dashboard/wo_highlight_dashboard/: app.py  module.py
modules/wo_teacher_per_student_view/: setup.cfg  setup.py
modules/wo_teacher_per_student_view/wo_teacher_per_student_view/: module.py
modules/writing_observer/: .bumpversion.toml  README.md  VERSION  setup.cfg
modules/writing_observer/tests/: conftest.py  test_module.py
modules/writing_observer/writing_observer/: aggregator.py  awe_nlp.py  document_timestamps.py  event_wrapper.py  gpt.py  languagetool.py  languagetool_features.py  module.py  nlp_indicators.py  reconstruct_doc.py  sample_essays.py  stub_nlp.py  tag_docs.py  writing_analysis.py
modules/writing_observer/writing_observer_obsolete/: README.md  writing.js  writing_display.html
(+646 files in other folders)
