[metadata]
name = Learning Observer
description = Learning Observer Core Package
url = http://www.ets.org
author_email = pmitros@ets.org
author = Piotr Mitros
version = file:VERSION

[options]
packages = learning_observer

[options.entry_points]
lo_modules =
   lo_core = learning_observer.module
console_scripts =
   learning_observer = learning_observer.run:run