[metadata]
name = LO Blocks module
version = file:VERSION
description = Use this as a base template for creating new modules on the Learning Observer.

[options]
packages = lo_blocks_module

[options.package_data]
lo_blocks_module = assets/*

[options.entry_points]
lo_modules =
   lo_blocks_module = lo_blocks_module.module
