[metadata]
name = LO Blocks module
version = file:VERSION
description = This is a generic module for understanding how write and read from reducers for the LO Blocks framework.

[options]
packages = lo_blocks_module

[options.package_data]
lo_blocks_module = assets/*

[options.entry_points]
lo_modules =
   lo_blocks_module = lo_blocks_module.module
