[metadata]
name = Writing Observer Automated Essay Feedback
description = Dashboard for interfacing a classroom of essays with automated feedback
url = https://github.com/ETS-Next-Gen/writing_observer
version = file:VERSION

[options]
packages = find:
include_package_data = true

[options.package_data]
wo_bulk_essay_analysis = assets/*

[options.entry_points]
lo_modules =
   wo_bulk_essay_analysis = wo_bulk_essay_analysis.module
