[metadata]
name = Writing Observer Classroom Text Highlighter
description = Use this as a base template for creating new modules on the Learning Observer.

[options]
packages = wo_classroom_text_highlighter

[options.entry_points]
lo_modules =
   wo_classroom_text_highlighter = wo_classroom_text_highlighter.module
