[metadata]
name = WO Classroom Text Highlighter
version = file:VERSION
description = Use this as a base template for creating new modules on the Learning Observer.

[options]
packages = wo_classroom_text_highlighter

[options.package_data]
wo_classroom_text_highlighter = assets/*

[options.entry_points]
lo_modules =
   wo_classroom_text_highlighter = wo_classroom_text_highlighter.module
