[metadata]
name = Writing Observer Teacher Error View
description = Dashboard for viewing errors across a classroom of students.
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = wo_common_student_errors
include_package_data = true

[options.entry_points]
lo_modules =
   lo_core = wo_common_student_errors.module

[options.package_data]
wo_common_student_errors = dashboard/*