[metadata]
name = Writing Observer Common Student Errors
description = Dashboard for viewing errors across a classroom of students.
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = wo_common_student_errors
include_package_data = true

[options.entry_points]
lo_modules =
   wo_common_student_errors = wo_common_student_errors.module

[options.package_data]
wo_common_student_errors = dashboard/*