[metadata]
name = Writing Observer List of Documents
description = Dashboard for viewing documents from various sources for each student.
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = find:
include_package_data = true

[options.entry_points]
lo_modules =
   wo_document_list = wo_document_list.module

[options.package_data]
wo_document_list = dashboard/*