[metadata]
name = Dash Writing Observer Class Highlight Dashboard
description = Dashboard using Dash for the Writing Observer
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = wo_highlight_dashboard

[options.entry_points]
lo_modules =
   lo_core = wo_highlight_dashboard.module
