[metadata]
name = Dash Writing Observer Class Highlight Dashboard
description = Dashboard using Dash for the Writing Observer
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = find:
include_package_data = true

[options.entry_points]
lo_modules =
   wo_highlight_dashboard = wo_highlight_dashboard.module

[options.package_data]
wo_highlight_dashboard = dashboard/*