[metadata]
name = Writing Observer Teacher per student view
description = Dashboard for teachers viewing per student data
url = https://github.com/ETS-Next-Gen/writing_observer
version = 0.1

[options]
packages = wo_teacher_per_student_view
include_package_data = true

[options.entry_points]
lo_modules =
   lo_core = wo_teacher_per_student_view.module

[options.package_data]
wo_teacher_per_student_view = layout/*