[metadata]
name = Writing Observer
description = Writing Observer, a tool for monitoring student writing processes
url = http://www.ets.org
author_email = pmitros@ets.org
author = Piotr Mitros
version = file:VERSION

[options]
packages = writing_observer

[options.entry_points]
lo_modules =
   wobserver = writing_observer.module
