[metadata]
name = Writing Observer
description = Writing Observer, a tool for monitoring student writing processes
url = http://www.ets.org
author_email = pmitros@ets.org
author = Piotr Mitros
version = file:VERSION

[options]
packages = writing_observer
install_requires =
   AWE_SpellCorrect @ git+https://github.com/ETS-Next-Gen/AWE_SpellCorrect.git
   AWE_Components @ git+https://github.com/ETS-Next-Gen/AWE_Components.git
   AWE_Lexica @ git+https://github.com/ETS-Next-Gen/AWE_Lexica.git
   AWE_LanguageTool @ git+https://github.com/ETS-Next-Gen/AWE_LanguageTool.git
   wikipedia

[options.entry_points]
lo_modules =
   wobserver = writing_observer.module
