[metadata]
name = {{ cookiecutter.project_name }}
description = Use this as a base template for creating new modules on the Learning Observer.

[options]
packages = {{ cookiecutter.project_slug }}

[options.entry_points]
lo_modules =
   {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.module
